# OTPView

./: .gitignore  .gitmodules  CMakeLists.txt  OTPView.pro  README.md  version.pri
.github/workflows/: ci.yml  qmake.yml  release.yml
app/: CMakeLists.txt  app.pro
app/res/: icon.icns  icon_alt.icns
app/src/: groupselectiondialog.cpp  groupselectiondialog.h  groupselectiondialog.ui  groupwindow.cpp  groupwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointselectiondialog.cpp  pointselectiondialog.h  pointselectiondialog.ui  producerwindow.cpp  producerwindow.h  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.ui  systemselectiondialog.cpp  systemselectiondialog.h  systemwindow.cpp  systemwindow.h  systemwindow.ui
app/src/models/: componentsmodel.cpp  componentsmodel.h  pointstablemodel.h  systemmodel.cpp  systemmodel.h
app/src/widgets/: groupspinbox.cpp  groupspinbox.h  linechart.cpp  linechart.h  pointspinbox.cpp  pointspinbox.h  priorityspinbox.cpp  priorityspinbox.h  scalespinbox.cpp  scalespinbox.h  spacialspinbox.cpp  spacialspinbox.h  systemspinbox.cpp  systemspinbox.h
cmake/: gitversion.cmake  package.cmake  package_dmg.cmake  package_ifw.cmake  package_prebuild.cmake.in  package_prebuild_darwin.cmake  package_prebuild_linux.cmake  package_prebuild_windows.cmake
installer/: createInstaller.ps1  otpview_installscript.qs
installer/config/: appdmg.json  config.xml  controlscript.qs
libs/: CMakeLists.txt  libs.pri
src/: groupselectiondialog.cpp  groupselectiondialog.h  groupwindow.cpp  groupwindow.h  groupwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointselectiondialog.cpp  pointselectiondialog.h  pointselectiondialog.ui  producerwindow.cpp  producerwindow.h  producerwindow.ui  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  systemselectiondialog.cpp  systemselectiondialog.h  systemselectiondialog.ui  systemwindow.cpp  systemwindow.h  systemwindow.ui
src/models/: componentsmodel.cpp  componentsmodel.h  pointstablemodel.cpp  pointstablemodel.h  systemmodel.cpp  systemmodel.h
src/widgets/: groupspinbox.cpp  groupspinbox.h  linechart.cpp  linechart.h  pointspinbox.cpp  pointspinbox.h  priorityspinbox.cpp  priorityspinbox.h  scalespinbox.cpp  scalespinbox.h  spacialspinbox.cpp  spacialspinbox.h  systemspinbox.cpp  systemspinbox.h
